k8s/base/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: mywebapp
spec:
  ports:
    - name: http-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: mywebapp
