k8s/base/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: mywebapp
  namespace: mywebapp
spec:
  to:
    kind: Service
    name: mywebapp
    weight: 100
  port:
    targetPort: http-8080
  wildcardPolicy: None
